# naoblaar

./: .gitignore  CMakeLists.txt  README  blaar  main.cpp
doc/: D cas d'utilisation.mdj  PFENAORAPPORTFINAL.docx  PFENAORAPPORTFINAL.odt  Plan.txt  diagramme_classe.mdj  diagramme_sequence.mdj  output.dia  output.tex  tags
src/: CMakeLists.txt  Makefile  f_optical_flow.c  filelinebutton.cpp  filelinebutton.h  launchView.cpp  launchView.cpp~  launchView.h  launchView.h~  main.cpp  mainwindow.cpp  mainwindow.cpp~  mainwindow.h  mainwindow.h~  mainwindow.ui  moc_filelinebutton.cpp  moc_mainwindow.cpp  moc_mainwindow.cpp~  moc_plotitem.cpp  moc_qcustomplot.cpp  moc_slideritem.cpp  moc_videoitem.cpp  movie.cpp  movie.cpp~  movie.h  movie.h~  my_optical_flow.cpp  my_optical_flow.cpp~  needToDo.txt  needToDo.txt~  open_image.c  open_image.h  oscillator.cpp  oscillator.h  plotitem.cpp  plotitem.h  pnglite.c  pnglite.h  qcustomplot.cpp  qcustomplot.h  (+21 more)
view/: Interface  Interface.pro  Makefile  mainwindow.cpp  mainwindow.h  moc_mainwindow.cpp
